--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,11 @@
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/clean-blog.min.css') }}" rel="stylesheet" type="text/css">
 
+        <!-- D3.js version 4 -->
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
+
 
 
   </head>
@@ -49,6 +54,7 @@
 
     <!-- Custom scripts for this template -->
     <script type="application/javascript" src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
+
 
 
   </body>
