--- a/app/templates/blog/post_1.html
+++ b/app/templates/blog/post_1.html
@@ -4,7 +4,7 @@
 
 <!-- Post Content -->
 <div class="text-center">
-  <img class="img-fluid" src="static/blog/post_1/img_0.jpg" alt="">
+  <img class="img-fluid" src="/static/blog/post_1/img_0.jpg" alt="">
 </div>
 
 <p>In February 2017, the MIT Media Lab hosted <a href="https://misinfocon.com" target="_blank" rel="noopener">Misinfocon</a>, a creative studio aimed at combating misinformation and promoting trust in journalism. Our team had came to Cambridge from around the country &#8211; from New York, San Francisco, Portland, Maine, and Washington, DC &#8211; and we were united by our passion for the intersection of data, journalism, and storytelling.</p>
@@ -12,7 +12,7 @@
 <p>Luckily, among our team, we had a strong, complementary set of skills in data munging, analysis, design, and data visualization. Over the next 36 hours, we worked together to create a proof of concept for a quantitative analysis of news inequality based on data from New York and Maine. Check out some of our findings <a href="http://christianmilneil.com/newsinequalitycheckup/" target="_blank" rel="noopener">here</a>!</p>
 
 <div class="text-center">
-  <img class="img-fluid" src="static/log/post_1/img_1.png" alt="">
+  <img class="img-fluid" src="/static/blog/post_1/img_1.png" alt="">
 </div>
 
 {% endblock %}
