--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,7 +1,9 @@
 
     <!-- Page Header -->
     <!-- style="background-image: url('img/home-bg.jpg') -->
-    <header class="masthead">
+
+      <header class="masthead"  style="background-image: url( {{ header_pic_url }} )">
+      <!-- <header class="masthead"> -->
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -10,6 +12,7 @@
               <h1>{{ main_header }}</h1>
                 {% if sub_header %}
                     <span class="subheading">{{ sub_header }}</span>
+                    {{ header_pic_url }}
                 {% endif %}
             </div>
           </div>
