added post 4, added background pictures, added bylines to posts, moved email recipient to environment variable

--- a/app/templates/blog/post_2.html
+++ b/app/templates/blog/post_2.html
@@ -176,6 +176,11 @@
 		<img class="img-fluid" src="/static/blog/post_2/inequality_score.png" alt="">
 </div>
 
+<p>
+	The inequality scores show that the Times' has a tendency to over-cover a few neighborhoods while under-covering most of the others. This is shown by the fact that there are more 
+	neighborhoods with negative inequality scores than positive.
+</p>
+
 <p>We can also view the geographic distribution of gentrification coverage and compare it the neighborhoods 
 	the Furman Center considers to be gentrifying, according to their <a href="http://furmancenter.org/files/sotc/Part_1_Gentrification_SOCin2015_9JUNE2016.pdf" target="_blank" rel="noopener">2016 study on the subject</a>. 
 	The interactive map below allows you to toggle between the NYT’s coverage and the Furman Center’s determination.
@@ -222,8 +227,8 @@
 </p>
 
 <p>
-	Either way, we believe that it important for the Times’ to continue to cover this important topic and should examine 
-	how it decides what neighborhoods to cover and consider using data-driven methodologies to help guide these decisions. 
+	Either way, we believe that it is important for the Times’ to continue to cover this important topic and should examine 
+	how it decides what neighborhoods to cover and consider using data-driven methodologies to help guide these decisions if feasible. 
 </p>
 
 <script>
