added copyright and removed links in footer

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -2,7 +2,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
@@ -29,8 +29,8 @@
                   </span>
                 </a>
               </li>
-            </ul>
-            <!--<p class="copyright text-muted">Copyright &copy; Your Website 2018</p>-->
+            </ul> -->
+            <p class="copyright text-muted">Copyright &copy; The News Inequality Project 2019</p>
           </div>
         </div>
       </div>
