--- a/app/app/templates/_post_preview.html
+++ b/app/app/templates/_post_preview.html
@@ -4,7 +4,7 @@
     {% if post.external_url %}
       <a href="{{ post.external_url }}">
     {% else %}
-      <a href="{{ url_for('blog.blog_post', post_id=post.id) }}">
+      <a href="{{ url_for('blog_post', post_id=post.id) }}">
     {% endif %}
 
       <h2 class="post-title">
